--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             </nav>
         </header>
         <main class="main">
-            <section></section>
+            <section class="cover">
+                <div class="cover__text"></div>
+                <img src="./images/logo-page.png" alt="" class="cover__img">
+            </section>
             <section></section>
             <section></section>
             <section></section>
