--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main class="main">
             <section class="cover">
                 <div class="cover__text"></div>
-                <img src="./images/logo-page.png" alt="" class="cover__img">
+                <img src="./images/logo-page.svg" alt="" class="cover__img">
             </section>
             <section></section>
             <section></section>
