--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body class="root">
     <div class="page">
         <header class="header">
-            <div class="logo"></div>
+            <div class="header__text">
+                <h1 class="header__title">Волонтёры Победы</h1>
+                <p class="header__subtitle">Московская область</p>
+            </div>
             <nav class="navigation">
                 <ul class="navigation__list">
                     <li class="navigation__item"><a href=""></a></li>
