--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main class="main">
             <section class="cover">
                 <div class="cover__text"></div>
-                <img src="./images/logo-page.svg" alt="" class="cover__img">
+                <img src="" alt="" class="cover__img">
             </section>
             <section></section>
             <section></section>
