--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <main class="main">
             <section class="cover">
                 <div class="cover__text"></div>
-                <img src="" alt="" class="cover__img">
+                <div class="cover__img">
+                    <button class="cover__btn"></button>
+                </div>
             </section>
             <section></section>
             <section></section>
