--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section class="cover">
                 <div class="cover__text"></div>
                 <div class="cover__img">
-                    <button class="cover__btn"></button>
+                    <button class="cover__btn" id="next"></button>
                 </div>
             </section>
             <section></section>
@@ -40,5 +40,6 @@
         <footer class="footer">
         </footer>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
