--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <main class="main">
             <section class="cover">
                 <div class="cover__text"></div>
-                <div class="cover__img">
-                    <button class="cover__btn" id="next"></button>
+                <div class="cover__img" id="slider">
+                    <button class="cover__next" id="next"></button>
+                    <button class="cover__back" id="back"></button>
                 </div>
             </section>
             <section></section>
