--- a/index.html
+++ b/index.html
@@ -1,46 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Боев Александр">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./pages/index.css">
-    <title>Волонтёры Победы</title>
-</head>
-<body class="root">
-    <div class="page">
-        <header class="header">
-            <div class="header__text">
-                <h1 class="header__title">Волонтёры Победы</h1>
-                <p class="header__subtitle">Московская область</p>
-            </div>
-            <nav class="navigation">
-                <ul class="navigation__list">
-                    <li class="navigation__item"><a href=""></a></li>
-                    <li class="navigation__item"><a href=""></a></li>
-                    <li class="navigation__item"><a href=""></a></li>
-                </ul>
-            </nav>
-        </header>
-        <main class="main">
-            <section class="cover">
-                <div class="cover__text"></div>
-                <div class="cover__img" id="slider">
-                    <button class="cover__next" id="next"></button>
-                    <button class="cover__back" id="back"></button>
-                </div>
-            </section>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
-        </main>
-        <footer class="footer">
-        </footer>
-    </div>
-    <script src="./script.js"></script>
-</body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"/><meta name="author" content="Боев Александр"><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="shortcut icon" href="./images/logo.png" type="image/x-icon"><title>Волонтёры Победы МО</title><link href="/static/css/main.c854ec58.chunk.css" rel="stylesheet"></head><body><div id="root"></div><script>!function(e){function r(r){for(var n,p,l=r[0],a=r[1],f=r[2],c=0,s=[];c<l.length;c++)p=l[c],Object.prototype.hasOwnProperty.call(o,p)&&o[p]&&s.push(o[p][0]),o[p]=0;for(n in a)Object.prototype.hasOwnProperty.call(a,n)&&(e[n]=a[n]);for(i&&i(r);s.length;)s.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,l=1;l<t.length;l++){var a=t[l];0!==o[a]&&(n=!1)}n&&(u.splice(r--,1),e=p(p.s=t[0]))}return e}var n={},o={1:0},u=[];function p(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,p),t.l=!0,t.exports}p.m=e,p.c=n,p.d=function(e,r,t){p.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},p.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},p.t=function(e,r){if(1&r&&(e=p(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(p.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)p.d(t,n,function(r){return e[r]}.bind(null,n));return t},p.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return p.d(r,"a",r),r},p.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},p.p="/";var l=this["webpackJsonpmy-app"]=this["webpackJsonpmy-app"]||[],a=l.push.bind(l);l.push=r,l=l.slice();for(var f=0;f<l.length;f++)r(l[f]);var i=a;t()}([])</script><script src="/static/js/2.db39837d.chunk.js"></script><script src="/static/js/main.fc3bff92.chunk.js"></script></body></html>
